log
Sat 27 Apr 2024 01:13:32 AM UTC: 
 tests:  0|6
total_score: 0/70
a339fdb
Sat 27 Apr 2024 01:29:28 AM UTC: 
 hashmap.c | 32 +++++++++++++++++++++++++++-----
 1 file changed, 27 insertions(+), 5 deletions(-)
 tests:  4|5
total_score: 20/70
101795d
Sat 27 Apr 2024 01:30:05 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
4cd4b3b
Sat 27 Apr 2024 01:32:40 AM UTC: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
ef6dd50
Sat 27 Apr 2024 01:36:33 AM UTC: 
 hashmap.c | 20 +++++++++++++++-----
 1 file changed, 15 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
  116 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2be05cd
Sat 27 Apr 2024 01:37:07 AM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
ff0137c
Sat 27 Apr 2024 01:40:41 AM UTC: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:121:21: error: subscripted value is neither array nor pointer nor vector
  121 |         map->current[i];
      |                     ^
Compilation failed
4624642
Sat 27 Apr 2024 01:41:15 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
d455894
